--- a/mvt.css
+++ b/mvt.css
@@ -22,7 +22,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     justify-content: space-between;
-    background-image: linear-gradient(to right,white,white, navy , blue ,blue,blue ,navy,navy,blue,blue,navy,lightblue );
+    background-image: rgb(0, 0, 0);
     align-items: center;
 }
 .nav a{
